--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>core</groupId>
   <artifactId>Single_Title_Validation</artifactId>
-  <version>1.1</version>
+  <version>${build.version}</version>
   <packaging>jar</packaging>
 
   <name>Single_Title_Validation</name>
@@ -21,5 +21,11 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+	<dependency>
+	  <groupId>org.seleniumhq.selenium</groupId>
+	  <artifactId>selenium-java</artifactId>
+	  <version>2.41.0</version>
+    </dependency>
+            
   </dependencies>
 </project>
